@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-10-13T00:58:53Z",
+  "timestamp" : "2023-10-13T08:16:55Z",
   "count_outdated" : 3040,
   "uniques_outdated" : 1233,
-  "count" : 3109,
-  "uniques" : 1284,
+  "count" : 3110,
+  "uniques" : 1285,
   "clones" : [
     {
       "timestamp": "2023-09-29T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count_decinc": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -127,6 +127,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-10-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
